2012-09-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source\NSTimeZone.m:
	* Source\NSBundle.m:
	* Source\NSPropertyList.m:
	* Source\NSProcessInfo.m:
	* Source\NSSocketPort.m:
	* Source\NSRunLoop.m:
	* Source\NSMessagePortNameServer.m:
	* Source\NSDistributedLock.m:
	* Source\GSHTTPURLHandle.m:
	* Source\NSZone.m:
	* Source\NSPage.m:
	* Source\NSMessagePort.m:
	* Source\NSUnarchiver.m:
	* Source\win32\GSFileHandle.m:
	* Source\NSFileManager.m:
	* Source\common.h:
	* Source\NSString.m:
	* Source\Additions\NSData+GNUstepBase.m:
	* Source\Additions\Unicode.m:
	* Source\Additions\NSMutableString+GNUstepBase.m:
	* Source\Additions\NSError+GNUstepBase.m:
	* Source\Additions\GSMime.m:
	* Source\Additions\NSString+GNUstepBase.m:
	* Source\Additions\GCArray.m:
	* Source\Additions\GSXML.m:
	* Source\Additions\NSNumber+GNUstepBase.m:
	* Source\Additions\GSObjCRuntime.m:
	* Source\GSString.m:
	* Source\NSObjCRuntime.m:
	* Source\GSFormat.m:
	* Source\GSFileHandle.m:
	* Source\NSTask.m:
	On windows with mingw we can use strtoull() rather than _strtoui64().
	Also, remove redundant header includes since string.h is in common.h

2012-09-03  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Fallback to the non icu-config check for ICU in
	the general case.
	* configure: Regenerate.

2012-09-01  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Implement `--disable-icu-config' switch to
	configure for platforms that ship libicu but not icu-config.
	* configure: Regenerate.

2012-08-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSSstring.m: ([-stringByAppendingPathComponent:]) fix for
	append to an empty string with a windows path as an argument.

2012-08-26  Niels Grewe <niels.grewe@halbordnung.de>

	*  configure.ac: Check for sys/filio.h and whether we need to
	link libsocket (as on QNX).
	*  configure
	*  SSL/configure
	*  Headers/GNUstepBase/config.h.in:
	Regenerate.
	*  Source/common.h
	*  Source/GSFileHandle.m
	*  Source/NSMessagePort.m